--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--=== HEADER ===-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">Ghozifr</a>
+            <a href="#" class="nav__logo">Ghozifikri</a>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list grid">
