--- a/index.html
+++ b/index.html
@@ -22,28 +22,22 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list grid">
                     <li class="nav__item">
-                        <a href="#home" class="nav__link"></a>
-                        <i class="uil uil-estate"></i> Home
+                        <a href="#home" class="nav__link"><i class="uil uil-estate nav__icon"></i>Home</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#about" class="nav__link"></a>
-                        <i class="uil uil-user"></i> About
+                        <a href="#about" class="nav__link"><i class="uil uil-user nav__icon"></i>About</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#skills" class="nav__link"></a>
-                        <i class="uil uil-file-alt"></i> Skills
+                        <a href="#skills" class="nav__link"><i class="uil uil-file-alt nav__icon"></i>Skills</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#services" class="nav__link"></a>
-                        <i class="uil uil-briefcase"></i> Services
+                        <a href="#services" class="nav__link"><i class="uil uil-briefcase nav__icon"></i>Services</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#portfolio" class="nav__link"></a>
-                        <i class="uil uil-scenery"></i> Portfolio
+                        <a href="#portfolio" class="nav__link"><i class="uil uil-scenery nav__icon"></i>Portfolio</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#contact" class="nav__link"></a>
-                        <i class="uil uil-message"></i> Contact
+                        <a href="#contact" class="nav__link"><i class="uil uil-message nav__icon"></i>Contact</a>
                     </li>
                 </ul>
                 <i class="uil uil-times nav__close" id="nav-close"></i>
