--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <!--=== HEADER ===-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">Ghozifikri</a>
+            <div>
+            <a href="#" class="nav__logo">ghozifr</a>
+        </div>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list grid">
