--- a/index.html
+++ b/index.html
@@ -54,7 +54,43 @@
     </header>
 
     <!--=== MAIN ===-->
-    <main class="main"></main>
+    <main class="main">
+        <!--=== HOME ===-->
+        <section class="home section" id="home">
+            <div class="home__container container grid">
+                <div class="home__content grid">
+                    <div class="home__social">
+                        <a href="https://www.linkedin.com/" target="_blank" class="home__social-icon">
+                            <i class="uil uil-linkedin-alt"></i>
+                        </a>
+                        <a href="https://www.instagram.com/" target="_blank" class="home__social-icon">
+                            <i class="uil uil-instagram"></i>
+                        </a>
+                        <a href="https://github.com/" target="_blank" class="home__social-icon">
+                            <i class="uil uil-github-alt"></i>
+                        </a>
+                    </div>
+                    <div class="home__img">
+                        <?xml version="1.0" standalone="no"?>
+                        <svg class="home__blob" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                            <path fill="#08BDBA" d="M43.6,-58.4C56.4,-50.6,66.6,-37.8,69.8,-23.7C73,-9.5,69.3,5.9,62.8,18.8C56.3,31.6,47.2,42,36.3,51.5C25.4,61,12.7,69.7,-2.3,72.8C-17.2,75.9,-34.4,73.5,-45.3,63.9C-56.3,54.4,-60.9,37.9,-67,21.3C-73,4.7,-80.4,-11.9,-75.9,-24.3C-71.4,-36.7,-55,-44.9,-40.3,-52C-25.7,-59.2,-12.8,-65.3,1.3,-67C15.4,-68.8,30.8,-66.1,43.6,-58.4Z" transform="translate(100 100)" />
+                        <img class="home__blob-img" xlink:href="assets/img/perfil.jpg"/>
+                        </svg>
+                    </div>
+                    <div class="home__data">
+                        <h1 class="home__title">Hi, I'am Ghozi</h1>
+                        <h3 class="home__subtitle">Backend developer</h3>
+                        <p class="home__description">Student</p>
+                        <a href="#contact" class="button button--flex">
+                            Contact Me <i class="uil uil-message button__icon"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="home__scroll"></div>
+            </div>
+        </section>
+    </main>
     <!--=== FOOTER ===-->
 
     <!--=== SCROLL TOP ===-->
