--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
                 </div>
 
                 <div class="home__scroll"></div>
+                <a href="#about" class="home__scoll-button button--flex">
+                    <i class="uil uil-mouse-alt home__scroll-mouse  "></i>
+                    <span class="home__scroll-name">Scroll down</span>
+                    <i class="uil uil-arrow-down home__scroll-arrow"></i>
+                </a>
             </div>
         </section>
     </main>
