--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                                 <path fill="#08BDBA" d="M43.6,-58.4C56.4,-50.6,66.6,-37.8,69.8,-23.7C73,-9.5,69.3,5.9,62.8,18.8C56.3,31.6,47.2,42,36.3,51.5C25.4,61,12.7,69.7,-2.3,72.8C-17.2,75.9,-34.4,73.5,-45.3,63.9C-56.3,54.4,-60.9,37.9,-67,21.3C-73,4.7,-80.4,-11.9,-75.9,-24.3C-71.4,-36.7,-55,-44.9,-40.3,-52C-25.7,-59.2,-12.8,-65.3,1.3,-67C15.4,-68.8,30.8,-66.1,43.6,-58.4Z" transform="translate(100 100)" />
                             </mask>
                             <g mask="url(#mask0)">
-                                <path fill="#08BDBA" d="M43.6,-58.4C56.4,-50.6,66.6,-37.8,69.8,-23.7C73,-9.5,69.3,5.9,62.8,18.8C56.3,31.6,47.2,42,36.3,51.5C25.4,61,12.7,69.7,-2.3,72.8C-17.2,75.9,-34.4,73.5,-45.3,63.9C-56.3,54.4,-60.9,37.9,-67,21.3C-73,4.7,-80.4,-11.9,-75.9,-24.3C-71.4,-36.7,-55,-44.9,-40.3,-52C-25.7,-59.2,-12.8,-65.3,1.3,-67C15.4,-68.8,30.8,-66.1,43.6,-58.4Z" transform="translate(100 100)" />
-                        <image class="home__blob-img" x="50" y="18" xlink:href="assets/img/perfil.png"/>
+                                <path d="M43.6,-58.4C56.4,-50.6,66.6,-37.8,69.8,-23.7C73,-9.5,69.3,5.9,62.8,18.8C56.3,31.6,47.2,42,36.3,51.5C25.4,61,12.7,69.7,-2.3,72.8C-17.2,75.9,-34.4,73.5,-45.3,63.9C-56.3,54.4,-60.9,37.9,-67,21.3C-73,4.7,-80.4,-11.9,-75.9,-24.3C-71.4,-36.7,-55,-44.9,-40.3,-52C-25.7,-59.2,-12.8,-65.3,1.3,-67C15.4,-68.8,30.8,-66.1,43.6,-58.4Z" transform="translate(100 100)" />
+                        <image class="home__blob-img" x="50" y="60" xlink:href="assets/img/ghozifr.png"/>
                     </g>
                         </svg>
                     </div>
@@ -98,6 +98,25 @@
                         <span class="home__scroll-name">Scroll down</span>
                         <i class="uil uil-arrow-down home__scroll-arrow"></i>
                     </a>
+                </div>
+            </div>
+        </section>
+
+        <!--=== ABOUT ===-->
+        <section class="about section" id="about">
+            <h2 class="section__title">About Me</h2>
+            <span class="section__subtitle">My introduction</span>
+            <div class="about__container container grid">
+                <img src="assets/img/perfil.png" alt="" class="about__img">
+
+                <div class="about__data">
+                    <p class="about__description">Web developer, with extensive knowledge and years of experience, working in web technologies and servers, delivering quality work.</p>
+
+                    <div class="about__info">
+                        <div>
+                            <span class="about__info-title"></span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
