--- a/index.html
+++ b/index.html
@@ -114,11 +114,31 @@
 
                     <div class="about__info">
                         <div>
-                            <span class="about__info-title"></span>
+                            <span class="about__info-title">08+</span>
+                            <span class="about__info-name">Years <br> experience</span>
                         </div>
+                        <div>
+                            <span class="about__info-title">20+</span>
+                            <span class="about__info-name">Completed <br> project</span>
+                        </div>
+                        <div>
+                            <span class="about__info-title">05+</span>
+                            <span class="about__info-name">Companies <br> experience</span>
+                        </div>
+                    </div>
+
+                    <div class="about__buttons">
+                        <a download="" href="#pdf" class="button button--flex">
+                            download CV<i class="uil uil-download-alt button_icon"></i>
+                        </a>
                     </div>
                 </div>
             </div>
+        </section>
+        
+        <!--=== SKILLS ===-->
+        <section class="skills section" id="skills">
+            <h2 class="section__title">Skills</h2>
         </section>
     </main>
     <!--=== FOOTER ===-->
