--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="skills__container container grid">
                 <div>
                     <!--============ SKILLS 1 ============-->
-                    <div class="skills__content">
+                    <div class="skills__content skills__open">
                         <div class="skills__header">
                             <i class="uil uil-brackets-curly skills__icon"></i>
 
@@ -163,7 +163,7 @@
                                     <span class="skils__number">90%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skill__percentage skills__html"></span>
+                                    <span class="skills__percentage skills__html"></span>
                                 </div>
                             </div>
 
@@ -173,7 +173,7 @@
                                     <span class="skils__number">80%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skill__percentage skills__css"></span>
+                                    <span class="skills__percentage skills__css"></span>
                                 </div>
                             </div>
 
@@ -183,7 +183,7 @@
                                     <span class="skils__number">60%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skill__percentage skills__js"></span>
+                                    <span class="skills__percentage skills__js"></span>
                                 </div>
                             </div>
 
@@ -193,14 +193,14 @@
                                     <span class="skils__number">75%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skill__percentage skills__react"></span>
+                                    <span class="skills__percentage skills__react"></span>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <br>
                     <!--============ SKILLS 2 ============-->
-                    <div class="skills__content">
+                    <div class="skills__content skills__close">
                         <div class="skills__header">
                             <i class="uil uil-server-network skills__icon"></i>
 
@@ -219,7 +219,7 @@
                                     <span class="skils__number">60%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skill__percentage skills__php"></span>
+                                    <span class="skills__percentage skills__php"></span>
                                 </div>
                             </div>
 
@@ -229,7 +229,7 @@
                                     <span class="skils__number">80%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skill__percentage skills__node"></span>
+                                    <span class="skills__percentage skills__node"></span>
                                 </div>
                             </div>
 
@@ -239,7 +239,7 @@
                                     <span class="skils__number">60%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skill__percentage skills__firebase"></span>
+                                    <span class="skills__percentage skills__firebase"></span>
                                 </div>
                             </div>
 
@@ -249,7 +249,7 @@
                                     <span class="skils__number">50%</span>
                                 </div>
                                 <div class="skills__bar">
-                                    <span class="skill__percentage skills__python"></span>
+                                    <span class="skills__percentage skills__python"></span>
                                 </div>
                             </div>
                         </div>
