--- a/index.html
+++ b/index.html
@@ -277,6 +277,26 @@
                 
                 <div class="qualification__sections">
                     <!--=== QUALIFICATION CONTENT 1 ===-->
+                    <div class="qualification__content">
+                    <!--=== QUALIFICATION 1 ===-->
+                        <div class="qualification__data">
+                            <div>
+                                <h3 class="qualification__title">Information Technology</h3>
+                                <span class="qualification__subtitle">IIUM</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    2019-2024
+                                </div>
+                            </div>
+
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--=== QUALIFICATION 1 ===-->
                     <div class="qualification__data">
                         <div>
                             <h3 class="qualification__title">Information Technology</h3>
@@ -292,7 +312,43 @@
                             <span class="qualification__line"></span>
                         </div>
                     </div>
+                </div>
 
+                <!--=== QUALIFICATION 1 ===-->
+                <div class="qualification__data">
+                    <div>
+                        <h3 class="qualification__title">Information Technology</h3>
+                        <span class="qualification__subtitle">IIUM</span>
+                        <div class="qualification__calendar">
+                            <i class="uil uil-calendar-alt"></i>
+                            2019-2024
+                        </div>
+                    </div>
+
+                    <div>
+                        <span class="qualification__rounder"></span>
+                        <span class="qualification__line"></span>
+                    </div>
+                </div>
+            </div>
+
+            <!--=== QUALIFICATION 1 ===-->
+            <div class="qualification__data">
+                <div>
+                    <h3 class="qualification__title">Information Technology</h3>
+                    <span class="qualification__subtitle">IIUM</span>
+                    <div class="qualification__calendar">
+                        <i class="uil uil-calendar-alt"></i>
+                        2019-2024
+                    </div>
+                </div>
+
+                <div>
+                    <span class="qualification__rounder"></span>
+                    <span class="qualification__line"></span>
+                </div>
+            </div>
+        </div>
                 </div>
             </div>
         </section>
